--- a/AdminPortal/src/app/productdetails/productlist.component.html
+++ b/AdminPortal/src/app/productdetails/productlist.component.html
@@ -21,7 +21,7 @@
                         <div>
                             <mat-form-field appearance="outline">
                                 <mat-label>Search Item</mat-label>
-                                <input matInput placeholder="Search" [(ngModel)]="searchQuery" (keyup)="applyFilter()">
+                                <input matInput placeholder="Search" [(ngModel)]="searchQuery">
                             </mat-form-field>
                             <button (click)="GetProductByFilter(page)" class="btn btn-danger">Search</button>
                             <button (click)="clearFilter()" class="btn btn-danger">Reset</button>
