--- a/AdminPortal/src/app/user-management/user-management.component.html
+++ b/AdminPortal/src/app/user-management/user-management.component.html
@@ -38,9 +38,9 @@
     <mat-tab label="Activity Logs" id="logsc" *ngIf="userType=='Client' || isAdmin">
       <app-activitylog></app-activitylog>
     </mat-tab>
-    <mat-tab label="SA FILTERS SORT" id="safc" *ngIf="userType=='Client' || isAdmin">
+    <!-- <mat-tab label="SA FILTERS SORT" id="safc" *ngIf="userType=='Client' || isAdmin">
       <app-safiltersortlist></app-safiltersortlist>
-    </mat-tab>
+    </mat-tab> -->
     <mat-tab label="Delete-Cacher" id="cachc" *ngIf="userType=='Client' || isAdmin">
       <app-delete-cacher></app-delete-cacher>
     </mat-tab>
