--- a/AdminPortal/src/app/productdetails/bulkproductlist.component.html
+++ b/AdminPortal/src/app/productdetails/bulkproductlist.component.html
@@ -1,44 +1,39 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header" data-background-color="darkblue">
-                        <table width=100%;>
-                            <tr>
-                                <td>
-                                    <h4 class="title">Product Bulk Upload</h4>
-                                    <p class="category">Manage your Bulk Products Details</p>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <input type="file" #fileDocListInput class="bulk-file-input"
-                                (change)="handleItemDocumentFileInput($event)">
+            <div class="custom-container">
+                <div class="custom-inner-container">
+                    <h5> Product Bulk Upload
+                        <small>Manage your Bulk Products Details</small>
+                    </h5>
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <input type="file" #fileDocListInput class="bulk-file-input"
+                                    (change)="handleItemDocumentFileInput($event)">
+                            </div>
+                            <div class="col-md-2">
+                                <button class="custom-btn" (click)="generateProductPriceCsv()">Download Sample
+                                    file</button>
+                            </div>
+                            <div class="col-md-2">
+                                <button class="custom-btn" (click)="OnItemDocumentBulkUpload()">Upload Product
+                                    Document</button>
+                            </div>
                         </div>
-                        <div class="col-md-2" style="margin-right: 60px;">
-                            <button class="btn btn-success pull-right" 
-                                (click)="generateProductPriceCsv()">Download Sample file</button>
-                        </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-info pull-right bulk-file-btn"
-                                (click)="OnItemDocumentBulkUpload()">Upload Product Document</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <input type="file" #filePriceListInput class="bulk-file-input"
-                                (change)="handleItemPriceListFileInput($event)">
-                        </div>
-                        <div class="col-md-2" style="margin-right:  60px;">
-                            <button class="btn btn-success pull-right" 
-                                (click)="generateProductDocCsv()">Download Sample file</button>
-                        </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-info pull-right bulk-file-btn"
-                                (click)="OnItemPriceListBulkUpload()">Upload Product Price</button>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <input type="file" #filePriceListInput class="bulk-file-input"
+                                    (change)="handleItemPriceListFileInput($event)">
+                            </div>
+                            <div class="col-md-2">
+                                <button class="custom-btn" (click)="generateProductDocCsv()">Download Sample
+                                    file</button>
+                            </div>
+                            <div class="col-md-2">
+                                <button class="custom-btn" (click)="OnItemPriceListBulkUpload()">Upload Product
+                                    Price</button>
+                            </div>
                         </div>
                     </div>
                 </div>
