--- a/AdminPortal/src/app/user-list/dialog-overview-example-dialog.html
+++ b/AdminPortal/src/app/user-list/dialog-overview-example-dialog.html
@@ -3,11 +3,6 @@
   <p>Are you sure want to delete this record?</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button (click)="onYesClick(data.userId)" style="margin-left:10px">Yes</button>
+  <button class="custom-btn" (click)="onNoClick()">No Thanks</button>
+  <button class="custom-white-btn" (click)="onYesClick(data.userId)" style="margin-left:10px">Yes</button>
 </div>
-
-
-<!-- Copyright 2018 Google Inc. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
