--- a/AdminPortal/src/app/user-list/user-list.component.html
+++ b/AdminPortal/src/app/user-list/user-list.component.html
@@ -3,23 +3,14 @@
         <div class="row">
             <div class="custom-container">
                 <div class="custom-inner-container">
-                    <h5>User List
-                        <small>Manage users list</small>
+                    <h5> {{userType == 'Admin' ? 'Admin List' : 'Customer List'}}
+                        <small>{{userType == 'Admin' ? 'Manage admin users' : 'Manage customer users'}}</small>
+                        <button class="header-button" (click)="OnAddUser(0)">Add User</button>
                     </h5>
                     <div class="record-count-section">
-                        <label>Show
-                            <select>
-                                <option value="10">10</option>
-                                <option value="25">25</option>
-                                <option value="50">50</option>
-                                <option value="100">100</option>
-                            </select>
-
-                            entries
-                        </label>
                         <label>
                             Search: 
-                            <input type="text" />
+                            <input type="text" (input)="applyFilter()" [(ngModel)]="searchText"/>
                         </label>
                     </div>
                     <table class="table table-striped table-bordered custom-table">
@@ -27,13 +18,13 @@
                             <tr>
                                 <th>First Name</th>
                                 <th>Last Name</th>
-                                <th>User Id</th>
+                                <th>{{userType == 'Admin' ? 'User Id' : 'Customer ID'}} </th>
                                 <th style="text-align: center;">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr
-                                *ngFor="let user of userList | paginate : { itemsPerPage:15, currentPage:page,totalItems:totalPage, id:'first' }">
+                                *ngFor="let user of filteredUserList | paginate : { itemsPerPage:15, currentPage:page,totalItems:totalPage, id:'first' }">
                                 <td data-title="First Name">{{user.FirstName}}</td>
                                 <td data-title="Last Name">{{user.LastName}}</td>
                                 <td data-title="Customer ID">{{user.MemberRefNo}}</td>
