--- a/AdminPortal/src/app/user-management/logo-upload/logo-upload.component.html
+++ b/AdminPortal/src/app/user-management/logo-upload/logo-upload.component.html
@@ -1,41 +1,44 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header" data-background-color="darkblue">
-                        <h4 class="title">Color Configuration List</h4>
-                        <p class="category">Manage your Color Configurations</p>
-
+            <div class="custom-container">
+                <div class="custom-inner-container">
+                    <h5> Color Configuration List
+                        <small>Manage your Color Configurations</small>
+                    </h5>
+                    <div class="record-count-section">
+                        <label>
+                            Search:
+                            <input type="text" (input)="applyFilter()" [(ngModel)]="searchText" />
+                        </label>
                     </div>
-                    <div *ngIf="configlist!=null && configlist!=undefined" class="card-content table-responsive table-mobile">
-                        <table class="table">
-                            <thead class="text-info">
+                    <div *ngIf="filteredConfigList!=null && filteredConfigList!=undefined">
+                        <table class="table table-striped table-bordered custom-table">
+                            <thead>
                                 <tr>
                                     <th>Key</th>
                                     <th>value </th>
                                     <th>Details</th>
-                                    <th>Action</th>
+                                    <th style="text-align: center;">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let conf of configlist">
+                                <tr *ngFor="let conf of filteredConfigList| paginate : { itemsPerPage:12, currentPage:page,totalItems:totalPage, id:'first' }">
                                     <td data-title="Key">{{conf.ColorConfigKey}}</td>
                                     <td data-title="value">{{conf.ColorValue}}</td>
                                     <td data-title="Details">{{conf.Description}}</td>
-
-                                    <td style="cursor: pointer;" class="btnalign">
-                                        <button (click)="onEditconf(conf.ColorConfigID)" class="btn btn-default">Edit</button>
-                                        <!-- <a (click)="onEditconf(conf.ColorConfigID)">
-                        <i class="material-icons">mode_edit</i>
-                      </a> -->
-
+                                    <td class="font-20" align="center">
+                                        <button (click)="onEditconf(conf.ColorConfigID)" class="btn btn-default">
+                                            <i class="fa fa-pencil"></i>
+                                        </button>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                        <hr>
-
+                        <div style="text-align:center">
+                            <pagination-controls (pageChange)="pageChanged($event)" id="first">
+                            </pagination-controls>
+                        </div>
                     </div>
                 </div>
             </div>
