--- a/AdminPortal/src/app/user-management/userconfiglist/userconfiglist.component.html
+++ b/AdminPortal/src/app/user-management/userconfiglist/userconfiglist.component.html
@@ -1,41 +1,44 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header" data-background-color="darkblue">
-                        <h4 class="title">Configuration List</h4>
-                        <p class="category">Manage your Configurations</p>
-
+            <div class="custom-container">
+                <div class="custom-inner-container">
+                    <h5> Configuration List
+                        <small>Manage your Configurations</small>
+                    </h5>
+                    <div class="record-count-section">
+                        <label>
+                            Search:
+                            <input type="text" (input)="applyFilter()" [(ngModel)]="searchText" />
+                        </label>
                     </div>
-                    <div *ngIf="configlist!=null && configlist!=undefined" class="card-content table-responsive table-mobile">
-                        <table class="table" width=100%;>
+                    <div *ngIf="configlist!=null && configlist!=undefined">
+                        <table class="table table-striped table-bordered custom-table">
                             <thead class="text-info">
                                 <tr>
-                                    <th style="width:30%">Key</th>
-                                    <th style="width:30%">value </th>
-                                    <th style="width:30%">Details</th>
-                                    <th style="width:10%">Action</th>
+                                    <th>Key</th>
+                                    <th>value </th>
+                                    <th>Details</th>
+                                    <th style="text-align: center;">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let conf of configlist">
-                                    <td data-title="Key">{{conf.ConfigKey}}</td>
-                                    <td data-title="value">{{conf.ConfigValue}}</td>
-                                    <td data-title="Details">{{conf.descr}}</td>
-
-                                    <td class="btnalign" style="cursor: pointer;">
-                                        <button (click)="onEditconf(conf.ConfigId)" class="btn btn-default">Edit</button>
-                                        <!-- <a >
-                      <i class="material-icons">mode_edit</i>
-                    </a> -->
-
+                                <tr *ngFor="let conf of filteredConfigList | paginate : { itemsPerPage:12, currentPage:page,totalItems:totalPage, id:'first' }">
+                                    <td>{{conf.ConfigKey}}</td>
+                                    <td>{{conf.ConfigValue}}</td>
+                                    <td>{{conf.descr}}</td>
+                                    <td class="font-20" align="center">
+                                        <button class="btn-icon" (click)="onEditconf(conf.ConfigId)"> 
+                                            <i class="fa fa-pencil"></i>
+                                        </button>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                        <hr>
-
+                        <div style="text-align:center">
+                            <pagination-controls (pageChange)="pageChanged($event)" id="first">
+                            </pagination-controls>
+                        </div>
                     </div>
                 </div>
             </div>
