--- a/AdminPortal/src/styles.css
+++ b/AdminPortal/src/styles.css
@@ -1,123 +1,232 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-/* You can add global styles to this file, and also import other style files */
-button.btn-submit{
-    background-color: #38547b;
-    color: #fff;
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+.mat-mdc-button .mdc-button__label {
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 50%;
+    /* margin: 10px 0 0 0; */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+    font-family: 'Poppins', sans-serif !important;
+}
+
+.mat-mdc-button .mdc-button__label {
+    position: fixed !important;
+    top: 100px;
+}
+
+.custom-inner-container {
+    border: 1px solid #c3c3c3;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 4px 4px 0px -1px #c3c3c3;
+    background: #fff;
+}
+
+.custom-inner-container h5 {
+    font-weight: 600;
+    font-size: 16px;
+    margin: 0 0 20px 0;
+    padding: 0;
+    border-bottom: 1px solid #c3c3c3;
+    letter-spacing: 0.8px;
+}
+
+.custom-inner-container h5 small {
     width: 100%;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1;
+    color: #777;
 }
-button.btn-submit:focus,button.btn-submit:hover{
-    background-color: #38547b;
+.custom-btn:hover{
+    background: #464741;
+    border: 1px solid #464741;
 }
-
-input.ng-invalid.ng-dirty{
-    border-bottom-color : #e91e63 !important;
-    box-shadow: 0 1px 0 0 #e91e63 !important;
+.custom-btn {
+    display: flex;
+    float: right;
+    background: #31322D;
+    border: 1px solid #31322D;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1.6px;
+    padding: 7px;
+    margin: 0 5px 18px 10px;
+    width: 150px;
+    word-wrap: break-word;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
 }
-/*for error div i*/
-div.error-message i{
-    vertical-align: middle !important;
+.custom-white-btn:hover{
+    background: #464741;
+    border: 1px solid #464741;
+    color: #fff;
 }
-
-/*for tab control*/
-.tabs{
-    height: 65px;
-}
-.tabs .tab{
-    text-transform : none !important;
-    line-height: 65px;
-    height: 65px;
-}
-.tabs .tab a{
-    font-size: 25px;
-    color: grey !important;
-}
-
-.tabs .tab a.active{
-    background-color: #fff !important;
-}
-
-/************* Added for new theme ******************/
-
-.card [data-background-color="black"]{
-    background: linear-gradient(60deg, #005faa, #005faa);
-    box-shadow: 0 12px 20px -10px rgba(0, 188, 212, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(0, 188, 212, 0.2);
-}
-
-.sidebar[data-color="blue"] .moving-tab, .off-canvas-sidebar[data-color="blue"] .moving-tab{
-    background-color: #00203FFF !important;
-    box-shadow: 0 12px 20px -10px rgba(0, 188, 212, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(0, 188, 212, 0.2);
-}
-
-.card .card-header .title{
-    color: #FFFFFF;
-    font-weight: bold;
-}
-
-.card .card-header .category{
-    margin-bottom: 0;
-    color: white;
+.custom-white-btn {
+    display: flex;
+    float: right;
+    background: #fff;
+    border: 1px solid #464741;
+    border-radius: 5px;
+    color: #464741;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1.6px;
+    padding: 7px;
+    margin: 0 15px 18px 10px;
+    width: 150px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
 }
 
-.text-info{
-    color:black;
+.custom-inner-container .header-button {
+    display: flex;
+    float: right;
+    position: relative;
+    bottom: 50px;
+    background:  #31322D;
+    margin: 0 10px 0 0;
+    border: 1px solid  #31322D;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1.6px;
+    padding: 7px;
+    width: auto;
+}
+.custom-inner-container .header-button:hover {
+    background: #464741;
+    border: 1px solid #464741;
 }
 
-a{
-    color:black;
+.custom-table thead th {
+    font-weight: 500 !important;
+    font-size: 15px !important;
+    color: #1B212D;
+    letter-spacing: 0.8px;
+    padding: 6px 10px !important;
 }
 
-a:hover, a:focus{
-    text-decoration: none;
+.custom-table tbody th,
+.custom-table tbody td {
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    color: #1B212D;
+    letter-spacing: 0.8px;
+    padding: 6px 10px !important;
 }
 
-.btn.btn-info{
-    background-color: #F55E25;
-    color: #FFFFFF;
+.font-20 {
+    font-size: 20px;
 }
 
-.btn.btn-info:active{
-    background-color: #F55E25;
-    color: #FFFFFF;
+.btn-icon {
+    border: none;
+    background: none;
 }
 
-.btn.btn-info:focus{
-    background-color: #F55E25;
-    color: #FFFFFF;
+.sidebar .nav p {
+    font-size: 16px;
+    letter-spacing: 0.8px;
+    font-weight: 500;
 }
 
-.btn.btn-info:hover{
-    background-color: #002f5c;
-    color: #FFFFFF;
+.record-count-section {
+    padding: 8px 0;
+    color: #1B212D;
+    display: flex;
+    justify-content: space-between;
 }
 
-
-.btn.btn-primary{
-    background-color: #de2525;
-    color: white;
+.record-count-section label {
+    color: #1B212D;
+    font-weight: 400;
+    letter-spacing: 0.8px;
 }
 
-.btn.btn-primary:active{
-    background-color: #de2525;
-    color: white;
+.record-count-section select,
+.record-count-section input {
+    background: #fff;
+    padding: 5px;
+    border: 1px solid #c3c3c3;
+    border-radius: 5px;
 }
 
-.btn.btn-primary:focus{
-    background-color: #de2525;
-    color: white;
+.ngx-pagination {
+    text-align: right;
 }
 
-.btn.btn-primary:hover{
-    background-color: #002f5c;
-    color: #FFFFFF;
+.ngx-pagination li {
+    background: #fff;
+    border: 1px solid #c3c3c3;
+    border-radius: 5px !important;
+    padding: 0 3px;
 }
 
-.btn.btn-default:hover{
-    background-color: #002f5c;
-    color: #FFFFFF;
+.ngx-pagination .current {
+    background: #464741 !important;
+    border: 1px solid #464741;
+    border-radius: 5px !important;
+    padding: 3px 12px !important;
+    color: #fff !important;
+    margin: 0 6px 0 0;
 }
 
-.navbar .dropdown-menu li a:hover, .navbar .dropdown-menu li a:focus, .navbar .dropdown-menu li a:active, .navbar.navbar-default .dropdown-menu li a:hover, .navbar.navbar-default .dropdown-menu li a:focus, .navbar.navbar-default .dropdown-menu li a:active{
-    background-color: #F55E25;
-    color: #FFFFFF;
-    box-shadow: 0 12px 20px -10px rgba(156, 39, 176, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(156, 39, 176, 0.2);
+.ngx-pagination li.pagination-next,
+.ngx-pagination li.pagination-previous {
+    border: none;
+    color: #1B212D;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+}
+
+.main-panel {
+    position: relative;
+    z-index: 2;
+    float: right;
+    overflow: auto;
+    width: calc(100% - 300px);
+    min-height: 100%;
+    -webkit-transform: translate3d(0px, 0, 0);
+    -moz-transform: translate3d(0px, 0, 0);
+    -o-transform: translate3d(0px, 0, 0);
+    -ms-transform: translate3d(0px, 0, 0);
+    transform: translate3d(0px, 0, 0);
+    -webkit-transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    -moz-transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    -o-transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    -ms-transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
+}
+
+[class*="col-md"] {
+    padding: 10px;
+}
+
+.custom-checkbox {
+    transform: scale(1.5);
+    margin-right: 20px;
 }
